--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: white;
+   background-color: rgb(194, 68, 68); 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -76,7 +76,7 @@ code {
 .recipe img {
   border-radius: 4px;
   object-fit: cover;
-  height: 200px;
+  height: fit-content;
 }
 
 .recipe a {
@@ -117,4 +117,8 @@ code {
 .ingredient-weight {
   color: #40b48e;
   font-size: 1.3rem;
+}
+img{
+  width: 100%;
+  height: 100%;
 }
